tests/compile-fail/Rule_2_1.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let res: u16;
    return;
    res = 3; //~ ERROR unreachable statement
}
